# DiveAnalizer

./: .gitignore  ANALYSIS_SUMMARY.md  ARCHITECTURE_PLAN.md  CLAUDE.md  FEAT_02_COMPLETION_CHECKLIST.md  FEAT_02_DELIVERABLES.md  FEAT_02_DEMO_README.md  FEAT_02_IMPLEMENTATION_SUMMARY.md  MODAL_IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_PHASE2_COMPLETION.md  PHASE_2_ANALYSIS.md  PHASE_2_GUIDE.md  PHASE_3_IMPLEMENTATION_ROADMAP.md  PHASE_TRADEOFF_MATRIX.md  QUICK_REFERENCE_PHASES.md  QUICK_TEST_GUIDE.md  README.md  README_V2.md  SPRINT_ROADMAP.md  START_HERE.md  STORAGE_MANAGEMENT.md  SYSTEM_CAPABILITY_ANALYSIS.md  TECHNICAL_ANALYSIS.md  benchmark_all_phases.py  compare_splash_methods.py  dive_performance_cache.pkl  improved_splash_test.py  optimized_benchmark.py  pyproject.toml  realistic_benchmark.py  requirements.txt  requirements_phase1_minimal.txt  run_e2e_test.sh  setup.py  slAIcer.py  slAIcer_wrapper.py  splash_methods_test.py  splash_only_detector.py  test_detection.py  test_phase2_comparison.py  (+6 more)
archive/old_implementation/: INTERACTIVE_ZONE_FEATURE.md  README_splash_only.md  detection_tool.py  dive_performance_cache.pkl  splash_only_detector.py  test_splash_only.py  test_splash_only_clean.py
diveanalyzer/: __init__.py  __main__.py  cli.py  config.py  error_handling.py
diveanalyzer/detection/: __init__.py  audio.py  fallback.py  fusion.py  motion.py  person.py
diveanalyzer/extraction/: __init__.py  ffmpeg.py  parallel.py  proxy.py  thumbnails.py
diveanalyzer/server/: __init__.py  sse_server.py
diveanalyzer/storage/: __init__.py  (+3 more)
dives/: review_gallery.html
docs/: GPU_TUNING_GUIDE.md  GROUND_TRUTH_ANNOTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  MANUAL_TESTING_GUIDE.md  README.md  TESTING_CHECKLIST.md  UX_PARALLEL_EXTRACTION_TICKETS.md  UX_SMART_EXTRACTION_REDESIGN.md
logs/: COMPLETION_SUMMARY.txt  FEAT_05_08_COMPLETE.txt  IMPLEMENTATION_VERIFICATION.txt  MODAL_IMPLEMENTATION_SUMMARY.txt  QA_TESTING_COMPLETE.txt
scripts/: README.md  README_AUTOMATION.md  auto_accept.py  batch_test.py  benchmark_all_phases.py  check_inline_scripts.py  quick_test.py  run_accept_and_close.sh  run_comprehensive_diagnostics.py  run_fixture_tests.py  test_installation.py  test_sse_consumer.html
tests/: __init__.py  test_audio_detection.py  test_edge_cases.py  test_fp16_quantization.py  test_frame_batching.py  test_fusion.py  test_gpu_detection.py  test_multi_gpu.py
(+48 files in other folders)
